--- a/Frontend/Frontend Urzisoft/pom.xml
+++ b/Frontend/Frontend Urzisoft/pom.xml
@@ -20,7 +20,11 @@
             <artifactId>jna</artifactId>
             <version>5.10.0</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver-sync</artifactId>
+            <version>4.9.1</version>
+        </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
